add div elements and image to page

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,3 +83,9 @@ img.mouse{
     text-align: center;
     color: #ffffff;
 }
+
+.container #about{
+    text-align: center;
+    padding-top: 20px;
+    
+}
