--- a/css/styles.css
+++ b/css/styles.css
@@ -3,64 +3,6 @@
     margin: auto;
 }
 
-header{
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    border-bottom: 1px solid gray;
-    padding: 0px 15px;
-    z-index: 10;
-}
-header .row{
-    justify-content: space-between;
-    align-items: center;
-}
-header .my-name a{
-    text-decoration: none;
-    font-size: 22px;
-    font-weight: 600;
-    color: white;
-    text-transform: uppercase;
-    position: relative;
-}
-
-header .navbar ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-header .navbar ul li{
-    display: inline-block;
-    margin-left: 35px;
-}
-header .navbar ul li a{
-    font-size: 15px;
-    text-decoration: none;
-    line-height: 72px;
-    color: #ffffff;
-    display: block;
-    font-weight: 600;
-    position: relative;
-}
-header .navbar ul li a::before{
-    content: '';
-    height: 3px;
-    background-color: #ffffff;
-    width: 0%;
-    position: absolute;
-    right: 0px;
-    bottom: -1px;
-    transition: all .5s ease;
-}
-header .navbar ul li a:hover::before{
-    width: 100%;
-    left: 0;
-}
-header .navbar ul li a.active::before{
-    width: 100%;
-    left: 0;
-}
-
 img.background{
     width: 100%;
 
@@ -98,3 +40,21 @@ img.mouse{
 .card-deck{
     text-align: center;
 }
+
+.service{
+    position: absolute;
+    top: 160%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #ffffff;
+}
+
+.do h4{
+    padding-top: 20px;
+    text-align: center;
+}
+.column {
+    float: left;
+    width: 25%;
+  }
