--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,24 @@ img.mouse{
     padding-top: 20px;
     text-align: center;
 }
-.column {
-    float: left;
-    width: 25%;
-  }
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  } 
+.contacts{
+    padding-top: 20px;
+}
+/* .form-group{
+    opacity: 0.5;
+} */
+.form-control{
+   background: transparent;
+   text-decoration-color: white;
+}
+
+.social-links{
+    text-align: center;
+    
+}
